# nagios-plugins-uptime

./: Makefile  Makefile.am  NEWS  README  README.md  TODO  check_uptime.c  configure.ac
src/: Makefile.am  check_uptime.c  getopt_long.c  nputils.c
